--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="./assets/images/favicon-32x32.png"
     />
 
-    <link rel="stylesheet" href="/css/main.min.css" />
+    <link rel="stylesheet" href="css/main.min.css" />
 
     <script
       src="https://kit.fontawesome.com/b4023152be.js"
